# textbrush

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  implementation-state.json  index.html  pyproject.toml  textbrush-missed-acceptance-criteria.md  user-stories.md
.audit-reports/: spec-2026-01-09.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  editor-integration.md  gpu-setup.md  troubleshooting.md
scripts/: download_model.py
specs/: cli-download-model-spec.md  emit-loading-state-on-init-spec.md  fix-default-resolution-inconsistency-spec.md  fix-readme-cli-examples-spec.md  fix-release-dmg-packaging-spec.md  fix-window-configuration-spec.md  flux-dimension-alignment-spec.md  image-metadata-split-view-spec.md  increment-1-foundation-requirements.md  increment-1-foundation.md  increment-2-inference-backend.md  increment-3-tauri-ipc.md  increment-4-ui-implementation.md  increment-5-integration-packaging.md  integrate-model-management-startup-spec.md  spec.md  ui-config-controls-spec.md  ui-control-button-icons-spec.md  ui-delete-button-visibility-spec.md  ui-dynamic-image-sizing-spec.md  ui-empty-state-placeholder-spec.md  ui-enhanced-loading-state-spec.md  ui-enhancements-spec.md  ui-history-position-indicator-spec.md  ui-keyboard-shortcuts-help-spec.md  ui-responsive-window-layout-spec.md  ui-seed-display-enhancements-spec.md  ui-status-bar-reorganization-spec.md  ui-theme-toggle-icon-spec.md  update-check-spec.md  wire-get-image-list-spec.md
specs/epic-align-window-configuration-with-spec/: acceptance-criteria.md  epic-state.json  exploration.json  spec.md  stories.json
specs/epic-backend-owns-image-list/: acceptance-criteria.md  epic-state.json  exploration.json  integration-result.json  spec.md  stories.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  commands_update_config.rs  exit_handlers.rs  launch_args.rs  main.rs  sidecar.rs
src-tauri/ui/: bundle.js  button-flash.js  button-flash.test.js  button-flash.ts  config_controls.js  config_controls.ts  eslint.config.js  font-size-manager.js  font-size-manager.ts  history-manager.js  history-manager.test.js  history-manager.ts  index.html  integration.test.js  ipc-contracts.test.js  list-manager.js  list-manager.test.js  list-manager.ts  main-regressions.test.js  main.js  main.ts  metadata-sync.test.js  package-lock.json  package.json  png-metadata.js  png-metadata.ts  state-sync-integration.test.js  theme-manager.js  theme-manager.test.js  theme-manager.ts  tsconfig.json  types.ts
src-tauri/ui/styles/: animations.css  main.css  variables.css
tests/: __init__.py  conftest.py  mocks.py  test_animations_css.py  test_backend_error_propagation.py  test_backend_generate_output_path.py  test_backend_save_metadata.py  test_backend_start_generation.py  test_buffer.py  test_buffer_stress.py  test_cleanup.py  test_cli.py  test_cli_headless.py  test_config.py  test_config_controls.py  test_config_controls_integration.py  test_flux_inference.py  test_flux_load.py  test_html_structure.py  test_image_delivery_update.py  test_inference_integration.py  test_integration.py  test_ipc_handler.py  test_ipc_handler_index_management.py  test_ipc_integration.py  test_ipc_server.py  test_paths.py  test_reproducibility.py  test_ui_config_integration.py  test_ui_styles.py  test_updates.py  test_weights.py  test_worker.py
textbrush/: __init__.py  backend.py  buffer.py  cli.py  config.py  paths.py  updates.py  worker.py
(+140 files in other folders)
